--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Install SSH Client
         run: |
-          cat ${{secrets.DEPLOY_KEY}} > ssh
+          cat "${{secrets.DEPLOY_KEY}}" > ssh
           ls -al
           pwd
           eval "$(ssh-agent -s)"
