--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,15 +44,19 @@ jobs:
           repository: ${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}
           path: build
 
-      - name: Install SSH Client
+      - name: Setup SSH Keys and known_hosts
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: |
-          cat "${{secrets.DEPLOY_KEY}}" > ssh
-          ls -al
-          pwd
-          eval "$(ssh-agent -s)"
-          ssh-add ./ssh
-          rm ssh
-          pwd
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          ssh-add - <<< "${{ secrets.DEPLOY_KEY }}"
+
+      # - name: Some task that fetches dependencies
+      #   env:
+      #     SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+      #   run: ./fetch-deps.sh
 
       - name: Push to Repo
         run: |
