--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,24 +51,12 @@ jobs:
         run: |
           eval "$(ssh-agent -s)"
           ssh-add - <<< "${DEPLOY_KEY}"
-          git clone git@github.com:shiviraj/counterBuild.git
-          cd counterBuild
+          git clone git@github.com:${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git
+          cd ${{secrets.BUILD_REPO}}
           rm -rf *
-          ls -al
           mv ../backend/* .
-          git config --global user.email "58025059+shiviraj@users.noreply.github.com"
-          git config --global user.name "shiviraj"
-          echo hello > hello.txt
-          ls -al
-          git add --all
+          git config --global user.email "58025059+${{secrets.USERNAME}}@users.noreply.github.com"
+          git config --global user.name "${{secrets.USERNAME}}"
+          git add .
           git commit -m "deployed"
-          echo "committed successfully"
           git push origin master
-
-      # git push origin master --set-upstream -f remote https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
-      # git remote add origin git@github.com:shiviraj/counterBuild.git
-      # git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
-
-# git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
-# curl -u "shiviraj:${{secrets.TOKEN}}" https://github.com/shiviraj/counterBuild.git
-# git remote set-url --add origin https://shiviraj:${{secrets.TOKEN}}@github.com/shiviraj/counterBuild.git
