modified github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,47 +4,42 @@ on:
     branches: [master]
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-      # - name: checkout backend
-      - uses: actions/checkout@v2
+      - name: checkout backend
+        uses: actions/checkout@v2
         with:
           fetch-depth: 1000
           repository: ${{secrets.USERNAME}}/${{secrets.BACKEND_REPO}}
           path: backend
 
-      # - name: Testing Backend
-      #   run: |
-      #     cd backend
-      #     npm install
-      #     npm test
+      - name: Testing Backend
+        run: |
+          cd backend
+          npm install
+          npm test
 
-      # # - name: checkout frontend
-      # - uses: actions/checkout@v2
-      #   with:
-      #     repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
-      #     path: frontend
+      - name: checkout frontend
+        uses: actions/checkout@v2
+        with:
+          repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
+          path: frontend
 
-      # - name: Testing frontend
-      #   run: |
-      #     cd frontend
-      #     npm install
-      #     npm test
+      - name: Testing frontend
+        run: |
+          cd frontend
+          npm install
+          npm test
 
-      # - name: Building frontend
-      #   run: |
-      #     cd frontend
-      #     npm run build
-      #     mv build/* ../backend/public/.
-      #     cd ..
-      #     rm -rf frontend
+      - name: Building frontend
+        run: |
+          cd frontend
+          npm run build
+          mv build/* ../backend/public/.
+          cd ..
+          rm -rf frontend
 
-      # - name: Some task that fetches dependencies
-      #   env:
-      #     SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-      #   run: ./fetch-deps.sh
-
-      - name: Clone a remote repo
+      - name: Push Build to remote repo
         env:
           DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
           GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
