--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
         run: |
           eval "$(ssh-agent -s)"
-          ssh-add - <<< "${DEPLOY_KEY}"
+          ssh-add -t 120 - <<< "${DEPLOY_KEY}"
           git clone git@github.com:${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git
           cd ${{secrets.BUILD_REPO}}
           rm -rf *
