--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,17 +39,34 @@ jobs:
           cd ..
           rm -rf frontend
 
-      - name: Push Build to remote repo
+      - name: checkout build repo
         env:
           DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
           GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
         run: |
           eval "$(ssh-agent -s)"
           ssh-add -t 120 - <<< "${DEPLOY_KEY}"
-          git clone git@github.com:${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git
-          cd ${{secrets.BUILD_REPO}}
+          git clone git@github.com:${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git build
+
+      - name: Move new builds to build repo
+        env:
+          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+          GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
+        run: |
+          eval "$(ssh-agent -s)"
+          ssh-add -t 120 - <<< "${DEPLOY_KEY}"
+          cd build
           rm -rf *
           mv ../backend/* .
+
+      - name: Push build to remote
+        env:
+          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+          GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
+        run: |
+          eval "$(ssh-agent -s)"
+          ssh-add -t 120 - <<< "${DEPLOY_KEY}"
+          cd build
           git config --global user.email "58025059+${{secrets.USERNAME}}@users.noreply.github.com"
           git config --global user.name "${{secrets.USERNAME}}"
           git add .
