--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,7 @@ jobs:
           DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
           GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
         run: |
-          eval "$(ssh-agent -s)"
-          ssh-add - <<< "${DEPLOY_KEY}"
+          eval "$(ssh-agent -s)" && ssh-add - <<< "${DEPLOY_KEY}"
           git clone git@github.com:${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git build
 
       - name: Move new builds to build repo
@@ -59,6 +58,7 @@ jobs:
           DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
           GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
         run: |
+          eval "$(ssh-agent -s)" && ssh-add - <<< "${DEPLOY_KEY}"
           cd build
           git config --global user.email "58025059+${{secrets.USERNAME}}@users.noreply.github.com"
           git config --global user.name "${{secrets.USERNAME}}"
