modified github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Checkout frontend
         uses: actions/checkout@v2
         with:
+          run: |
+            eval "$(ssh-agent -s)" && ssh-add - <<< "${{secrets.DEPLOY}}"
           repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
           path: frontend
 
@@ -41,10 +43,9 @@ jobs:
 
       - name: Checkout build repo
         env:
-          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
           GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
         run: |
-          eval "$(ssh-agent -s)" && ssh-add - <<< "${DEPLOY_KEY}"
+          eval "$(ssh-agent -s)" && ssh-add - <<< "${{secrets.DEPLOY_KEY}}"
           git clone git@github.com:${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git build
 
       - name: Move new builds to build repo
@@ -55,10 +56,9 @@ jobs:
 
       - name: Push build to remote
         env:
-          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
           GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
         run: |
-          eval "$(ssh-agent -s)" && ssh-add - <<< "${DEPLOY_KEY}"
+          eval "$(ssh-agent -s)" && ssh-add - <<< "${{secrets.DEPLOY_KEY}}"
           cd build
           git config --global user.email "58025059+${{secrets.USERNAME}}@users.noreply.github.com"
           git config --global user.name "${{secrets.USERNAME}}"
