--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Checkout frontend
         run: |
-          eval "$(ssh-agent -s)" && ssh-add - <<< "${{secrets.DEPLOY}}"
+          eval "$(ssh-agent -s)" && ssh-add -t 60 - <<< "${{secrets.DEPLOY}}"
           git clone git@github.com:${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}.git frontend
 
       - name: Testing frontend
@@ -42,7 +42,7 @@ jobs:
         env:
           GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
         run: |
-          eval "$(ssh-agent -s)" && ssh-add - <<< "${{secrets.DEPLOY_KEY}}"
+          eval "$(ssh-agent -s)" && ssh-add -t 60 - <<< "${{secrets.DEPLOY_KEY}}"
           git clone git@github.com:${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git build
 
       - name: Move new builds to build repo
@@ -55,7 +55,7 @@ jobs:
         env:
           GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no'
         run: |
-          eval "$(ssh-agent -s)" && ssh-add - <<< "${{secrets.DEPLOY_KEY}}"
+          eval "$(ssh-agent -s)" && ssh-add -t 60 - <<< "${{secrets.DEPLOY_KEY}}"
           cd build
           git config --global user.email "58025059+${{secrets.USERNAME}}@users.noreply.github.com"
           git config --global user.name "${{secrets.USERNAME}}"
