--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,5 +60,5 @@ jobs:
           git config --global user.email "58025059+${{secrets.USERNAME}}@users.noreply.github.com"
           git config --global user.name "${{secrets.USERNAME}}"
           git add .
-          git commit -m "deployed"
+          git commit -m "Backend: $(cd ../counterServer && git log -n 1 --format=%B)"
           git push origin master
